Making Java 11 compatible, Making it work ZestGuidance, now creating coverage data