@@ -19,6 +19,7 @@ import org.junit.Test;
 
 import java.io.File;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 @Ignore
 public class SvgGeneratorTest {
@@ -64,8 +65,8 @@ public class SvgGeneratorTest {
         xlinkPackage.getEClassifiers().forEach(clazz -> System.out.println("XLink: "+ clazz.getName()));
         svgPackage.getEClassifiers().forEach(clazz -> System.out.println("SVG: "+ clazz.getName()));
 
-        var xlinkClasses = xlinkPackage.getEClassifiers().stream().map(EClassifier::getName).toList();
-        var svgClasses = svgPackage.getEClassifiers().stream().map(EClassifier::getName).toList();
+        var xlinkClasses = xlinkPackage.getEClassifiers().stream().map(EClassifier::getName).collect(Collectors.toList());
+        var svgClasses = svgPackage.getEClassifiers().stream().map(EClassifier::getName).collect(Collectors.toList());
 
         for(String clazz : xlinkClasses) {
             if(svgClasses.contains(clazz)) {
